[gd_scene load_steps=12 format=2]

[ext_resource path="res://Code/Clases.gd" type="Script" id=1]
[ext_resource path="res://Font/Cookie Dough.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/FunnyKid.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/enemySwimming_1.png" type="Texture" id=4]
[ext_resource path="res://art/enemyWalking_1.png" type="Texture" id=5]
[ext_resource path="res://art/enemySwimming_2.png" type="Texture" id=6]
[ext_resource path="res://art/enemyWalking_2.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 110
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "caminar",
"speed": 5.0
} ]

[node name="CanvasLayer" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = -2.0
margin_right = 1356.0
margin_bottom = 778.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.145098, 0.686275, 0.831373, 1 )

[node name="Lessons" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 428.0
margin_top = 67.0
margin_right = 946.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Lessons"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Open_Door" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 81.0
margin_top = 250.0
margin_right = 502.0
margin_bottom = 349.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Instructions"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Match" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 79.0
margin_top = 417.0
margin_right = 500.0
margin_bottom = 516.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Match"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Back" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 35.0
margin_top = 686.0
margin_right = 179.0
margin_bottom = 757.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="5"]

position = Vector2( 1062.39, 290.449 )
frames = SubResource( 4 )
animation = "caminar"

[connection signal="pressed" from="Open_Door" to="." method="_on_Open_Door_pressed"]

[connection signal="pressed" from="Match" to="." method="_on_Match_pressed"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


